Changes credential files to work. Adds Credentials.h~ template page.

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ SimpleTimer.zip
 pubsubclient-master.zip
 
 // Credentials
-Credentials.cpp
+smart-roomba-arduino/libraries/Credentials/Credentials.h
